Kubernetes-Manifests-file/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mainlb
  namespace: ecommerce-backend-api
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    # alb.ingress.kubernetes.io/subnets: "subnet-05cbd75f20d2a6be1,subnet-0a7564793dcf9d66e,subnet-08beaaa1c93709320"
spec:
  ingressClassName: alb
  rules:
    - host: amanpathakdevops.study
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8000
          - path: /healthz
            pathType: Exact
            backend:
              service:
                name: api
                port:
                  number: 8000
          - path: /ready
            pathType: Exact
            backend:
              service:
                name: api
                port:
                  number: 8000
          - path: /started
            pathType: Exact
            backend:
              service:
                name: api
                port:
                  number: 8000
